--- a/views/category-manager.ejs
+++ b/views/category-manager.ejs
@@ -73,7 +73,7 @@
                   <a class="nav-link nav-link-icon text-center" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <div class="nav-link-icon__wrapper">
                       <i class="material-icons">&#xE7F4;</i>
-                      <span class="badge badge-pill badge-danger">2</span>
+                      <span class="badge badge-pill badge-danger"><%= pendingPosts.length %></span>
                     </div>
                   </a>
                   <div class="dropdown-menu dropdown-menu-small" aria-labelledby="dropdownMenuLink">
@@ -84,24 +84,13 @@
                         </div>
                       </div>
                       <div class="notification__content">
-                        <span class="notification__category">Analytics</span>
-                        <p>Your website’s active users count increased by
-                          <span class="text-success text-semibold">28%</span> in the last week. Great job!</p>
+                        <span class="notification__category">Approvals</span>
+                        <p>You have <%= pendingPosts.length %> approvals recieved
+                         </p>
                       </div>
                     </a>
-                    <a class="dropdown-item" href="#">
-                      <div class="notification__icon-wrapper">
-                        <div class="notification__icon">
-                          <i class="material-icons">&#xE8D1;</i>
-                        </div>
-                      </div>
-                      <div class="notification__content">
-                        <span class="notification__category">Sales</span>
-                        <p>Last week your store’s sales count decreased by
-                          <span class="text-danger text-semibold">5.52%</span>. It could have been worse!</p>
-                      </div>
-                    </a>
-                    <a class="dropdown-item notification__all text-center" href="#"> View all Notifications </a>
+                  
+                    
                   </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -500,6 +489,27 @@
       });
     });
   });
+
+
+  // Assuming you have the `pendingPosts` array available in your code
+  var pendingPosts = [
+    // Your array of pending posts goes here
+  ];
+
+  // Function to get the count of pending posts
+  function getPendingPostsCount() {
+    return pendingPosts.length;
+  }
+
+  // Function to update the notification count in the container
+  function updateNotificationCount() {
+    var count = getPendingPostsCount();
+    document.getElementById("notificationContainer").innerText = count;
+  }
+
+  // Call the update function to display the initial count on page load
+  updateNotificationCount();
+
 </script>
 
 
