--- a/views/user-dashboard/create-post.ejs
+++ b/views/user-dashboard/create-post.ejs
@@ -98,7 +98,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/list">
+                <a class="nav-link active" href="/dashboard">
                   <i class="material-icons">note_add</i>
                   <span>Add New Post</span>
                 </a>
@@ -168,7 +168,7 @@
                       <i class="material-icons">&#xE7FD;</i> Profile</a>
                     <a class="dropdown-item" href="components-blog-posts.html">
                       <i class="material-icons">vertical_split</i> Blog Posts</a>
-                    <a class="dropdown-item" href="/list">
+                    <a class="dropdown-item" href="/dashboard">
                       <i class="material-icons">note_add</i> Add New Post</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item text-danger" href="/logout">
