--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,11 +6,13 @@
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
 		<form action="/signup" method="post" id="form1">
+			<h6 style="color: red;"><%= message %></h6>
 			<h1>Create Account</h1>
 	
 			<input type="text" name="name" placeholder="Name" />
 			<input type="email" name="email" placeholder="Email" />
 			<input type="password" name="password" placeholder="Password" />
+			<input type="password" name="confirmPassword" placeholder="Confirm Password" />
 			<button type="submit">Sign Up</button>
 		</form>
 	</div>
