--- a/views/super-admin/users.ejs
+++ b/views/super-admin/users.ejs
@@ -98,9 +98,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/list">
+                <a class="nav-link " href="/dashboard">
                   <i class="material-icons">note_add</i>
-                  <span>Add New Category</span>
+                  <span>Add New Topic</span>
                 </a>
               </li>
               
