--- a/views/topic-manager/topic-manager.ejs
+++ b/views/topic-manager/topic-manager.ejs
@@ -24,7 +24,7 @@
               <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
                 <div class="d-table m-auto">
                  
-                  <span class="d-none d-md-inline ml-1">Dashboard - Category Manager</span>
+                  <span class="d-none d-md-inline ml-1">Dashboard - Topic Manager</span>
                 </div>
               </a>
               <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
@@ -305,7 +305,7 @@
                     <div class="blog-comments__item d-flex p-3">
                       <div class="blog-comments__content">
                         <div class="blog-comments__meta text-muted">
-                          <a class="text-secondary" href="#"><%= post.user.name %></a> on
+                          
                           <a class="text-secondary" href="#"><%= post.title %></a>
                           <span class="text-muted">– 3 days ago</span>
                         </div>
