--- a/views/user-dashboard/blog-list.ejs
+++ b/views/user-dashboard/blog-list.ejs
@@ -51,7 +51,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/list">
+                <a class="nav-link " href="/dashboard">
                   <i class="material-icons">note_add</i>
                   <span>Add New Post</span>
                 </a>
