--- a/views/super-admin/super-admin.ejs
+++ b/views/super-admin/super-admin.ejs
@@ -145,7 +145,7 @@
 					  <div class="card-body">
 						<form class="add-new-post" action="/category" method="post">
 						  <div class="form-group">
-							<input class="form-control form-control-lg mb-3" type="text" name="title" placeholder="Your Post Title">
+							<input class="form-control form-control-lg mb-3" type="text" name="title" placeholder="Your topic">
 						  </div>
 				
 						  <div class="form-group">
