--- a/views/home.ejs
+++ b/views/home.ejs
@@ -125,7 +125,12 @@
 				<div class="row">
 					<div class="col-md-12">
 
-						<% approvedPosts.forEach((post) => { %>
+						<% approvedPosts.forEach((post) => {
+							// Split the post content into words
+							const words = post.content.split(' ');
+							// Get the first 10 words
+							const limitedContent = words.slice(0, 10).join(' ');
+						  %>
 						<div class="post-blog">
 							<div class="blog-image">
 								<a href="blog-single.html">
@@ -135,14 +140,16 @@
 							<div class="blog-content">
 								<span class="meta-date"><a href="#"><%= post.created_at %></a></span>
 								<span class="meta-author"><a href="#"><%= post.user.name %></a></span>
-								<h3><a href="blog-single.html"><%= post.title %></a></h3>
+								<h3><a href="/single-blog/<%= post.id %>"><%= post.title %></a></h3>
 								<div class="heart-container">
 									<span id="heart-<%= post.id %>" class="fa fa-heart-o like"></span>
 								</div>
+								
 								<p class="light-text">
-									<%= post.content %> <a href="blog-single.html">Continue Reading...</a>
+									<%= limitedContent %> <a href="/single-blog/<%= post.id %>">Continue Reading...</a>
 									
 								</p>
+								
 							</div> <!-- /.blog-content -->
 						</div> <!-- /.post-blog -->
 						<% }); %>
