--- a/views/super-admin/users.ejs
+++ b/views/super-admin/users.ejs
@@ -109,41 +109,7 @@
                   <input class="navbar-search form-control" type="text" placeholder="Search for something..." aria-label="Search"> </div>
               </form>
               <ul class="navbar-nav border-left flex-row ">
-                <li class="nav-item border-right dropdown notifications">
-                  <a class="nav-link nav-link-icon text-center" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <div class="nav-link-icon__wrapper">
-                      <i class="material-icons">&#xE7F4;</i>
-                      <span class="badge badge-pill badge-danger">2</span>
-                    </div>
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-small" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="#">
-                      <div class="notification__icon-wrapper">
-                        <div class="notification__icon">
-                          <i class="material-icons">&#xE6E1;</i>
-                        </div>
-                      </div>
-                      <div class="notification__content">
-                        <span class="notification__category">Analytics</span>
-                        <p>Your website’s active users count increased by
-                          <span class="text-success text-semibold">28%</span> in the last week. Great job!</p>
-                      </div>
-                    </a>
-                    <a class="dropdown-item" href="#">
-                      <div class="notification__icon-wrapper">
-                        <div class="notification__icon">
-                          <i class="material-icons">&#xE8D1;</i>
-                        </div>
-                      </div>
-                      <div class="notification__content">
-                        <span class="notification__category">Sales</span>
-                        <p>Last week your store’s sales count decreased by
-                          <span class="text-danger text-semibold">5.52%</span>. It could have been worse!</p>
-                      </div>
-                    </a>
-                    <a class="dropdown-item notification__all text-center" href="#"> View all Notifications </a>
-                  </div>
-                </li>
+              
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     <img class="user-avatar rounded-circle mr-2" src="/static/images/user.jpg" alt="User Avatar">
@@ -180,6 +146,38 @@
             <!-- Default Dark Table -->
             <div class="row">
               <div class="col">
+                <div class="card card-small mb-4">
+                  <div class="card-header border-bottom">
+                    <h6 class="m-0">Topic Managers</h6>
+                  </div>
+                  <div class="card-body p-0 pb-3 text-center">
+                    <table class="table mb-0">
+                      <thead class="bg-light">
+                        <tr>
+                          <th scope="col" class="border-bottom-0">Name</th>
+                          <th scope="col" class="border-bottom-0">Email</th>
+                          <th scope="col" class="border-bottom-0">Actions</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <% users.forEach((user) => { %>
+                          <% if (user.role === 'manager') { %>
+                            <tr>
+                              <td><%= user.name %></td>
+                              <td><%= user.email %></td>
+                              <td><button type="button">View Details</button></td>
+                            </tr>
+                          <% } %>
+                        <% }); %>
+                       
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
                 <div class="card card-small overflow-hidden mb-4">
                   <div class="card-header bg-dark">
                     <h6 class="m-0 text-white">Users</h6>
@@ -188,21 +186,21 @@
                     <table class="table table-dark mb-0">
                       <thead class="thead-dark">
                         <tr>
-                          <th scope="col" class="border-bottom-0">#</th>
+                       
                           <th scope="col" class="border-bottom-0">Name</th>
                           <th scope="col" class="border-bottom-0">Email</th>
-                          <th scope="col" class="border-bottom-0">Role</th>
+                          <th scope="col" class="border-bottom-0">Actions</th>
                         </tr>
                       </thead>
                       <tbody>
-                          <% users.forEach((user) => { %>
-                        <tr>
-                          <td></td>
-                          <td><%= user.name %></td>
-                          <td><%= user.email %></td>
-                          <td><%= user.role %></td>
-                          
-                        </tr>
+                        <% users.forEach((user) => { %>
+                          <% if (user.role === 'user') { %>
+                            <tr>
+                              <td><%= user.name %></td>
+                              <td><%= user.email %></td>
+                              <td><button type="button">View Details</button></td>
+                            </tr>
+                          <% } %>
                         <% }); %>
                       </tbody>
                     </table>
