--- a/views/user-dashboard/blog-list.ejs
+++ b/views/user-dashboard/blog-list.ejs
@@ -69,7 +69,8 @@
                     <span class="d-none d-md-inline-block"><%= user.name %></span>
                   </a>
                   <div class="dropdown-menu dropdown-menu-small">
-                   
+                    <a class="dropdown-item" href="/">
+                      <i class="material-icons">note_add</i> Go to home page</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item text-danger" href="/logout">
                       <i class="material-icons text-danger">&#xE879;</i> Logout </a>
