--- a/views/user-dashboard/create-post.ejs
+++ b/views/user-dashboard/create-post.ejs
@@ -117,12 +117,9 @@
                     <span class="d-none d-md-inline-block"><%= user.name %></span>
                   </a>
                   <div class="dropdown-menu dropdown-menu-small">
-                    <a class="dropdown-item" href="user-profile-lite.html">
-                      <i class="material-icons">&#xE7FD;</i> Profile</a>
-                    <a class="dropdown-item" href="components-blog-posts.html">
-                      <i class="material-icons">vertical_split</i> Blog Posts</a>
-                    <a class="dropdown-item" href="/dashboard">
-                      <i class="material-icons">note_add</i> Add New Post</a>
+                  
+                    <a class="dropdown-item" href="/">
+                      <i class="material-icons">note_add</i> Go to home page</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item text-danger" href="/logout">
                       <i class="material-icons text-danger">&#xE879;</i> Logout </a>
